--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.17",
     "@reduxjs/toolkit": "^2.2.4",
     "axios": "^1.6.8",
+    "flowbite-react": "^0.9.0",
     "framer-motion": "^11.1.9",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
