--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,13 +13,16 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.17",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
     "@reduxjs/toolkit": "^2.2.4",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.3",
     "flowbite-react": "^0.9.0",
     "framer-motion": "^11.1.9",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
