--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,8 +23,9 @@
     "chart.js": "^4.4.3",
     "clsx": "^2.1.1",
     "flowbite-react": "^0.9.0",
-    "framer-motion": "^11.2.4",
+    "framer-motion": "^11.2.10",
     "js-cookie": "^3.0.5",
+    "mini-svg-data-uri": "^1.4.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
